--- a/quix.yaml
+++ b/quix.yaml
@@ -26,7 +26,7 @@ deployments:
     version: latest
     deploymentType: Service
     resources:
-      cpu: {{ test }}
+      cpu: 200
       memory: 500
       replicas: 1
     variables:
