--- a/quix.yaml
+++ b/quix.yaml
@@ -26,11 +26,11 @@ deployments:
     version: latest
     deploymentType: Service
     resources:
-      cpu: { test1 }
+      cpu: 500
       memory: 500
       replicas: 1
     variables:
-      - name: input
+      - name: test
         inputType: InputTopic
         description: This is the input topic for f1 data
         required: true
